tests/integration/snapshots/integration__redaction__foo_bar.snap
---
source: tests/integration/redaction.rs
expression: "Selector::parse(\".foo.bar\").unwrap()"
---
Selector {
    selectors: [
        [
            Key(
                "foo",
            ),
            Key(
                "bar",
            ),
        ],
    ],
}
