tests/integration/snapshots/integration__redaction__foo_bar_alt.snap
---
source: tests/integration/redaction.rs
expression: "Selector::parse(\".foo[\\\"bar\\\"]\").unwrap()"
---
Selector {
    selectors: [
        [
            Key(
                "foo",
            ),
            Key(
                "bar",
            ),
        ],
    ],
}
