tests/integration/snapshots/integration__redaction__foo_bar_full_range.snap
---
source: tests/integration/redaction.rs
expression: "Selector::parse(\".foo.bar[]\").unwrap()"
---
Selector {
    selectors: [
        [
            Key(
                "foo",
            ),
            Key(
                "bar",
            ),
            Range(
                None,
                None,
            ),
        ],
    ],
}
