tests/integration/snapshots/integration__redaction__foo_bar_range.snap
---
source: tests/integration/redaction.rs
expression: "Selector::parse(\".foo.bar[10:20]\").unwrap()"
---
Selector {
    selectors: [
        [
            Key(
                "foo",
            ),
            Key(
                "bar",
            ),
            Range(
                Some(
                    10,
                ),
                Some(
                    20,
                ),
            ),
        ],
    ],
}
