tests/integration/snapshots/integration__redaction__map_key_redaction.snap
---
source: tests/integration/redaction.rs
expression: foo_value
---
hm:
  ? bucket: "[bucket]"
    value: 0
  : 42
btm:
  "[key]": 23
