tests/integration/snapshots/integration__redaction__struct_array_redaction.snap
---
source: tests/integration/redaction.rs
expression: "vec![checkout]"
---
- _id: "[checkout_id]"
  products:
    - _id: "[product_id]"
      product_name: "[product_name]"
    - _id: "[product_id]"
      product_name: "[product_name]"
